# FROG

./: .all-contributorsrc  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/build-docs/: action.yml
.github/actions/build-win-exe/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: check-links.yml  ci.yml  docs.yml  release.yml  setup.yml
.zed/: debug.json
docs/: gen_ref_nav.py  hardware_sets.md
frog/gui/: stepper_motor_view.py
frog/gui/hardware_set/: hardware_sets_view.py
frog/gui/measure_script/: script.py  script_run_dialog.py
frog/hardware/: device.py  http_device.py  manage_devices.py
frog/hardware/plugins/sensors/: decades.py  em27_sensors.py
frog/hardware/plugins/spectrometer/: opus_interface.py
frog/hardware/plugins/stepper_motor/: dummy.py  st10_controller.py  stepper_motor_base.py
src/: FROG.spec
src/frog/: config.py
src/frog/gui/: stepper_motor_view.py
src/frog/gui/hardware_set/: device.py  device_view.py  finesse.yaml  hardware_set.py  hardware_sets_view.py  menu.py
src/frog/gui/measure_script/: script.py  script_run_dialog.py  sequence_widget.py
src/frog/hardware/: manage_devices.py  serial_device.py
src/frog/hardware/plugins/sensors/: em27_sensors.py
src/frog/hardware/plugins/spectrometer/: dummy_opus_interface.py
src/frog/hardware/plugins/stepper_motor/: dummy.py  st10_controller.py  stepper_motor_base.py
src/frog/hardware/plugins/temperature/: dp9800.py
tests/gui/: test_stepper_motor_view.py
tests/gui/hardware_set/: test_active_device_manager.py  test_device_control.py  test_hardware_sets_view.py
tests/gui/measure_script/: test_script.py  test_script_runner.py  test_sequence_widget.py
tests/hardware/: test_device.py  test_http_device.py  test_serial_device.py
tests/hardware/plugins/sensors/: test_decades.py  test_em27_sensors.py
tests/hardware/plugins/spectrometer/: test_dummy_opus_interface.py  test_opus_interface.py
tests/hardware/plugins/stepper_motor/: test_dummy_stepper_motor.py  test_st10_controller.py  test_stepper_motor_base.py
